add group schedule
