# src/modules/group/dtos/update-status.dto.ts
@@ -1,0 +1,11 @@
+import { IsBoolean, IsNotEmpty, IsString } from 'class-validator';
+
+export class UpdateStatusDTO {
+  @IsNotEmpty()
+  @IsString()
+  groupId: string;
+
+  @IsNotEmpty()
+  @IsBoolean()
+  status: boolean;
+}
