# src/modules/group/group.controller.ts
@@ -1,9 +1,12 @@
 import {
   Body,
   Controller,
+  Delete,
   Get,
   HttpCode,
   HttpStatus,
+  Param,
+  Patch,
   Post,
 } from '@nestjs/common';
 import { GroupService } from './group.service';
@@ -12,11 +15,15 @@ import { CreateGroupDTO } from './dtos/create-group.dto';
 import { GetDetailGroupDTO } from './dtos/get-group-list.dto';
 import { CreateLedGroupDTO } from './dtos/create-led-group.dto';
 import { BaseControllerDecorators } from 'src/decorators/controller.decorator';
+import { CreateGroupScheduleDTO } from './dtos/create-schedule.dto';
+import { UpdateStatusDTO } from './dtos/update-status.dto';
+import { GroupUpdateScheduleDTO } from './dtos/group-update-schedule.dto';
+import { GroupDeleteScheduleDTO } from './dtos/group-delete-schedule.dto';
 
 @BaseControllerDecorators({
   tag: 'group',
-  apiBearerAuth: true,
-  useAuthGuard: true,
+  apiBearerAuth: false,
+  useAuthGuard: false,
 })
 @Controller('group')
 export class GroupController {
@@ -60,5 +67,43 @@ export class GroupController {
   @Post('/create-led')
   createLed(@Body() data: CreateLedGroupDTO) {
     return this.groupService.createLedGroup(data);
+  }
+
+  @HttpCode(HttpStatus.OK)
+  @ApiOkResponse({
+    description: 'Create new schedule successed!',
+  })
+  @ApiOperation({ summary: 'Create new led to group records' })
+  @Post('/create-schedule')
+  createSchedule(@Body() data: CreateGroupScheduleDTO) {
+    return this.groupService.createSchedule(data);
+  }
+
+  @HttpCode(HttpStatus.OK)
+  @ApiOkResponse({
+    description: 'Update group status successed!',
+  })
+  @ApiOperation({ summary: 'Update group status' })
+  @Post('/update-status')
+  updateStatus(@Body() data: UpdateStatusDTO) {
+    return this.groupService.updateStatus(data);
+  }
+
+  @HttpCode(HttpStatus.OK)
+  @Get('/schedule/:id')
+  getScheduleList(@Param('id') id: string) {
+    return this.groupService.getScheduleList(id);
+  }
+
+  @HttpCode(HttpStatus.OK)
+  @Patch('/schedule')
+  updateSchedule(@Body() data: GroupUpdateScheduleDTO) {
+    return this.groupService.updateSchedule(data);
+  }
+
+  @HttpCode(HttpStatus.OK)
+  @Delete('/schedule')
+  deleteSchedule(@Body() data: GroupDeleteScheduleDTO) {
+    return this.groupService.deleteSchedule(data);
   }
 }
